--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.sohu.live56" >
 
     <application
+        android:name=".app.LiveApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,6 +29,21 @@
             android:label="@string/app_name"
             android:launchMode="standard"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.login.LoginActivity"
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.login.UnitLogin"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".view.login.TelActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".view.login.PersonalSettingActivity"
+            android:label="@string/title_activity_personal_setting" >
+        </activity>
     </application>
 
 </manifest>
