--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sohu.live56" >
+    package="com.sohu.live56">
 
     <application
         android:name=".app.LiveApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".view.main.MainActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,18 +36,24 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.login.UnitLogin"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.login.TelActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.login.PersonalSettingActivity"
-            android:label="@string/title_activity_personal_setting" >
-        </activity>
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".view.login.PersonalInfoActivity"
-            android:label="@string/title_activity_personal_info" >
-        </activity>
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
