--- a/gif-drawable/build.gradle
+++ b/gif-drawable/build.gradle
@@ -1,5 +1,4 @@
 import org.apache.tools.ant.taskdefs.condition.Os
-
 buildscript {
     repositories {
         mavenCentral()
@@ -10,15 +9,12 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.3.0'
     }
 }
-
 apply plugin: 'com.android.library'
 apply from: 'gradle-mvn-push.gradle'
-
 String ndkDebug = isDebugBuild() ? "NDK_DEBUG=1" : "NDK_DEBUG=0"
-
 android {
     compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    buildToolsVersion '23.0.0'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
@@ -64,11 +60,9 @@ android {
     }
 }
 clean.dependsOn cleanNative
-
 tasks.withType(JavaCompile) {
     compileTask -> compileTask.dependsOn buildNative
 }
-
 allprojects {
     version = VERSION_NAME
     group = GROUP
@@ -79,7 +73,6 @@ allprojects {
         provided 'com.android.support:support-annotations:22.2.1'
     }
 }
-
 afterEvaluate { project ->
     android.libraryVariants.all { variant ->
         tasks.androidJavadocs.doFirst {
@@ -87,7 +80,6 @@ afterEvaluate { project ->
         }
     }
 }
-
 def shouldApplyFlavors() {
     def flavors = ['armeabi', 'armeabi-v7a', 'x86', 'mips', 'arm64-v8a', 'mips64', 'x86_64']
     boolean applyFlavors = false
@@ -99,11 +91,9 @@ def shouldApplyFlavors() {
     }
     applyFlavors
 }
-
 def isDebugBuild() {
     !gradle.startParameter.taskNames.contains("uploadArchives") && VERSION_NAME.contains("SNAPSHOT")
 }
-
 def getNdkBuildCommand() {
     def ndkDir = android.ndkDirectory
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
@@ -111,4 +101,7 @@ def getNdkBuildCommand() {
     } else {
         return "$ndkDir/ndk-build"
     }
+}
+
+dependencies {
 }
