--- a/kurentrtclib/build.gradle
+++ b/kurentrtclib/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "23.0.0 rc3"
+    buildToolsVersion '23.0.0'
 
     defaultConfig {
         minSdkVersion 14
@@ -16,11 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
-    compile files('libs/autobanh.jar')
     compile files('libs/gson-2.3.1.jar')
+    compile files('libs/autobanh.jar')
 }
