--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,9 +45,11 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.main.player.LiveActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:launchMode="standard"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
             android:name=".view.login.LoginActivity"
             android:label="@string/app_name"
@@ -67,12 +69,12 @@
             android:name=".view.login.PersonalSettingActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.login.PersonalInfoActivity"
             android:label="@string/app_name"
             android:launchMode="standard"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
