--- a/gif-drawable/build.gradle
+++ b/gif-drawable/build.gradle
@@ -13,8 +13,8 @@ apply plugin: 'com.android.library'
 apply from: 'gradle-mvn-push.gradle'
 String ndkDebug = isDebugBuild() ? "NDK_DEBUG=1" : "NDK_DEBUG=0"
 android {
-    compileSdkVersion 22
-    buildToolsVersion '23.0.0'
+    compileSdkVersion 23
+    buildToolsVersion '23.0.1'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
@@ -104,4 +104,5 @@ def getNdkBuildCommand() {
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:23.0.1'
 }
