--- a/kurentrtclib/build.gradle
+++ b/kurentrtclib/build.gradle
@@ -3,7 +3,6 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 23
     buildToolsVersion '23.0.1'
-
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 22
@@ -16,7 +15,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    productFlavors {
+    }
 }
 
 dependencies {
